# graphrag_project

./: .gitignore  docker-compose.yml
backend/: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: api.py  auth.py  chat.py  departments.py  graph.py  ingest.py  tests.py
backend/app/core/: config.py  constants.py  logging.py  metrics.py  middleware.py  observability.py  prompts.py
backend/app/core/graphrag/: __init__.py  document_ingestion.py  entity_extraction.py  graph_builder.py  vector_indexer.py
backend/app/core/langgraph/: __init__.py  agent.py  agent_utils.py  memory.py  tools.py
backend/app/core/security/: __init__.py  guardrails.py  rbac.py
backend/app/models/: __init__.py  base.py  department.py  file_metadata.py  message.py  schemas.py  session.py  user.py
backend/app/services/: __init__.py  database.py  neo4j_service.py  ollama_service.py  qdrant_service.py  s3_service.py
backend/app/utils/: __init__.py  auth.py  sanitization.py
docs/: DEFENSE_PLAN.md  DEPLOYMENT.md  README.md  TECH_STACK.md  USER_GUIDE.md  VIDEO_DEMO_SCRIPT.md
docs/adr/: 001-llm-model-selection.md  002-embedding-model-selection.md  003-llm-serving-engine.md  004-vector-database.md  005-graph-database.md  006-orchestration-framework.md
docs/architecture/: README.md  data-flow-pipeline.mmd  er-diagram.mmd  workspace.dsl  (+2 more)
frontend/: Dockerfile  index.html  nginx.conf
monitoring/: prometheus.yml
presentation/: business.html  defense.html  index.html
scripts/: init.sh  load_datasets.py  seed_departments.py  seed_users.py
tests/: conftest.py  test_api.py  test_graphrag.py  test_guardrails.py  test_llm_judge.py  test_rbac.py
(+7 files in other folders)
